@@ -16,9 +16,6 @@ package jsyntaxpane.lexers;
 import jsyntaxpane.DefaultLexer;
 import jsyntaxpane.Token;
 import jsyntaxpane.TokenType;
-import javax.swing.KeyStroke;
-import javax.swing.text.Keymap;
-import jsyntaxpane.SyntaxActions;
 
 %%
 
@@ -44,12 +41,6 @@ import jsyntaxpane.SyntaxActions;
     private Token token(TokenType type) {
         return new Token(type, yychar, yylength());
     }
-
-    @Override
-    public void addKeyActions(Keymap map) {
-        super.addKeyActions(map);
-    }
-
 %}
 
 /* main character classes */
